--- a/170516/Views/Administrator/ViewOrderDetails.cshtml
+++ b/170516/Views/Administrator/ViewOrderDetails.cshtml
@@ -69,6 +69,26 @@
                                     }</h6>
                                 </div>
                             </div>
+                            <div class="form-group">
+                                <label class="col-sm-3 control-label" for="ProductName">Tiền cước</label>
+                                <div class="col-sm-7">
+                                    <h6 class="info-box">
+                                        @Html.DisplayFor(model => model.Order.Freight)                                        
+                                    </h6>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-3 control-label" for="ProductName">Tiền thuế</label>
+                                <div class="col-sm-7">
+                                    <h6 class="info-box">@Html.DisplayFor(model => model.Order.SalesTax)</h6>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-3 control-label" for="ProductName">Tổng đơn hàng</label>
+                                <div class="col-sm-7">
+                                    <h6 class="info-box">@Html.DisplayFor(model => model.Order.TotalIncome)</h6>
+                                </div>
+                            </div>
                         </fieldset>
                     </div>
                 </div>
@@ -79,57 +99,8 @@
                                 <input type="hidden" id="dataTables_sort_field_hidden" value="@Model.SortField" />
                                 <input type="hidden" id="dataTables_sort_direction_hidden" value="@Model.IsAsc" />
                                 @Html.HiddenFor(model => model.OrderID)
-                                <div class="dataTables_show_item_div form-inline">
-                                    <label><span>Hiển thị</span></label>
-                                    <select id="dataTables_showNumberSelectOrderDetails" aria-controls="dataTables-example" class="form-control input-sm">
-                                        @if (Model.ItemOnPage == 10)
-                                    {
-                                    <option value="10" selected>10</option>
-                                    }
-                                    else
-                                    {
-                                    <option value="10">10</option>
-                                    }
-                                        @if (Model.ItemOnPage == 25)
-                                    {
-                                    <option value="25" selected>25</option>
-                                    }
-                                    else
-                                    {
-                                    <option value="25">25</option>
-                                    }
-                                        @if (Model.ItemOnPage == 50)
-                                    {
-                                    <option value="50" selected>50</option>
-                                    }
-                                    else
-                                    {
-                                    <option value="50">50</option>
-                                    }
-                                        @if (Model.ItemOnPage == 100)
-                                    {
-                                    <option value="100" selected>100</option>
-                                    }
-                                    else
-                                    {
-                                    <option value="100">100</option>
-                                    }
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div id="dataTables_show_item_search" class="dataTables_search_div form-inline">
-                                    @if (!string.IsNullOrEmpty(Model.SearchText) && Model.SearchText.Equals("NULL"))
-                                {
-                                <input type="search" class="form-control input-sm" value="">
-                                }
-                                else
-                                {
-                                <input type="search" class="form-control input-sm" value="@Model.SearchText">
-                                }
-                                    <button type="button" id="dataTables_searchOrderDetails" class="btn btn-default btn-sm"><i class="fa fa-search"></i></button>
-                                </div>
-                            </div>
+                                @Html.HiddenFor(model => model.SearchText)
+                            </div>                            
                         </div>
 
                         <div class="row">
@@ -271,27 +242,28 @@
                                                 <td>@i</td>
                                                 <td>@Model.OrderDetails[i - 1].OrderID</td>
                                                 <td>@Model.OrderDetails[i - 1].ProductName</td>
-                                                <td><label id="Price">@Model.OrderDetails[i - 1].Price</label>   
+                                                <td>
+                                                 @Html.DisplayFor(model => model.OrderDetails[i-1].Price)
                                                </td>
                                                 <td>
                                                     <label id="Quantity">@Model.OrderDetails[i - 1].Quantity</label>
                                                 </td>
                                                 <td>
-                                                    <label id="Discount">@Model.OrderDetails[i - 1].Discount</label>
+                                                    @Html.DisplayFor(model => model.OrderDetails[i - 1].Discount)                                                    
                                                 </td>
                                                 <td>
                                                     <label id="Size">@Model.OrderDetails[i - 1].Size</label>
-                                                <td>
-                                                    <label id="Total">@Model.OrderDetails[i - 1].Total</label>
+                                                <td>                                                    
+                                                    @Html.DisplayFor(model => model.OrderDetails[i - 1].Total)
                                                 </td>
                                                 <td>
                                                     @if (Model.OrderDetails[i - 1].IsFulfilled)
                                                     {
-                                                        <span id="IsFulfilled" class="text-info">Đã xong</span>
+                                                        <span id="IsFulfilled" class="btn-success">Đã xong</span>
                                                     }
                                                     else
                                                     {
-                                                        <span id="IsFulfilled" class="text-danger">Chưa giao</span>
+                                                        <span id="IsFulfilled" class="btn-info">Chưa giao</span>
                                                     }                                                   
                                                 </td>                                                                                               
                                             </tr>
@@ -303,56 +275,6 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="dataTables_info" role="status" aria-live="polite">Hiển thị từ @Model.StartIndex tới @Model.EndIndex trong @Model.TotalNumber sản phẩm</div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="dataTables_paginate">
-                                    <ul class="pagination">
-                                        @if (Model.CurrentPage == 1)
-                                        {
-                                            <li class="paginate_button previous disabled" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous">
-                                                <a href="#">Trước</a>
-                                            </li>
-                                        }
-                                        else
-                                        {
-                                            <li class="paginate_button previous" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous">
-                                                <a href="@Url.Action("ViewOrderDetails", "Administrator", new {id = Model.OrderID, page = Model.CurrentPage - 1, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">Trước</a>
-                                            </li>
-                                        }
-
-                                        @for (var i = 0; i < 5; i++)
-                                        {
-                                            if ((Model.CurrentPage + i) <= Model.TotalPage)
-                                            {
-                                                if (i == 0)
-                                                {
-                                                    <li class="paginate_button active" aria-controls="dataTables-example" tabindex="0">
-                                                        <a href="@Url.Action("ViewOrderDetails", "Administrator", new {id = Model.OrderID, page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">@((Model.CurrentPage + i).ToString())</a>
-                                                    </li>
-                                                }
-                                                else
-                                                {
-                                                    <li class="paginate_button" aria-controls="dataTables-example" tabindex="0">
-                                                        <a href="@Url.Action("ViewOrderDetails", "Administrator", new {id = Model.OrderID,  page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc })">@((Model.CurrentPage + i).ToString())</a>
-                                                    </li>
-                                                }
-                                            }
-                                        }
-
-                                        @if (Model.CurrentPage == Model.TotalPage)
-                                        {
-                                            <li class="paginate_button next disabled" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next">
-                                                <a href="#">Sau</a>
-                                            </li>
-                                        }
-                                        else
-                                        {
-                                            <li class="paginate_button next" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next">
-                                                <a href="@Url.Action("ViewOrderDetails", "Administrator", new {id = Model.OrderID, page = Model.CurrentPage + 1, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">Sau</a>
-                                            </li>
-                                        }
-                                    </ul>
-                                </div>
                             </div>
                         </div>
                         }
