DoanhHN - update validation - navigation

--- a/170516/Views/Administrator/UpdateCustomer.cshtml
+++ b/170516/Views/Administrator/UpdateCustomer.cshtml
@@ -116,7 +116,7 @@
                                 <div class="form-group">
                                     <div class="col-md-12 form-button">
                                         <button class="btn btn-primary" type="button" id="SubmitUpdateCustomer"><i class="glyphicon glyphicon-floppy-disk"></i> Lưu</button>
-                                        <button class="btn btn-danger" type="button" id="btnDeleteCustomer"><i class="glyphicon glyphicon-remove"></i> Xóa</button>
+                                        <button class="btn btn-danger" type="button" id="btnDeleteCustomer"><i class="glyphicon glyphicon-remove"></i> Hủy</button>
                                     </div>
                                 </div>
                             </div>
