--- a/170516/Views/Administrator/ViewCustomerDetails.cshtml
+++ b/170516/Views/Administrator/ViewCustomerDetails.cshtml
@@ -104,3 +104,7 @@
         </div>
     </div>
 </div>
+@section Scripts
+{
+    <script src="@Url.Content("~/Scripts/Admin/customer.js")"></script>
+}
