--- a/170516/Views/Administrator/ViewOrder.cshtml
+++ b/170516/Views/Administrator/ViewOrder.cshtml
@@ -10,7 +10,7 @@
         <div class="content-box-large">
             <div class="panel-heading">
                 <ol class="breadcrumb">
-                    <li class="active">Quản Lý Đơn hàng</li>
+                    <li><a href="@Url.Action("ViewOrder","Administrator")">Quản Lý Đơn hàng</a></li>                    
                 </ol>
                 <div class="panel-title title-3">Danh Sách Đơn hàng</div>               
             </div>
