--- a/170516/Views/Administrator/AddSupplier.cshtml
+++ b/170516/Views/Administrator/AddSupplier.cshtml
@@ -56,7 +56,7 @@
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Address2">Địa chỉ 2: <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="Address2">Địa chỉ 2:</label>
                                 <div class="col-sm-7">
                                     @Html.TextBoxFor(model => model.Address2, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
                                     @Html.ValidationMessageFor(model => model.Address2, null, new { @class = "input-error-box text-danger" })
@@ -78,7 +78,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Fax">Fax: <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="Fax">Fax: </label>
                                 <div class="col-sm-7">
                                     @Html.TextBoxFor(model => model.Fax, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
                                     @Html.ValidationMessageFor(model => model.Fax, null, new { @class = "input-error-box text-danger" })
