--- a/170516/Views/Administrator/UpdateOrder.cshtml
+++ b/170516/Views/Administrator/UpdateOrder.cshtml
@@ -57,7 +57,7 @@
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label" for="Address2">Cước <span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
-                                        @Html.TextBoxFor(model => model.Freight, new { @class = "form-control" }) <span class="input-error-box text-danger"></span>
+                                        @Html.TextBoxFor(model => model.Freight, new { @class = "form-control" }) 
                                         <span class="input-error-box text-danger"></span>
                                     </div>
                                 </div>
@@ -65,14 +65,14 @@
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label" for="City">Thuế <span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
-                                        @Html.TextBoxFor(model => model.SalesTax, new { @class = "form-control", Value = String.Format("{0:0}", Model.SalesTax) }) <span class="input-error-box text-danger"></span>
+                                        @Html.TextBoxFor(model => model.SalesTax, new { @class = "form-control", Value = String.Format("{0:0}", Model.SalesTax) })
                                         <span class="input-error-box text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label" for="Phone">Đã trả <span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
-                                        @Html.TextBoxFor(model => model.Paid, new { @class = "form-control", Value = String.Format("{0:0}", Model.Paid) })<span class="input-error-box text-danger"></span>
+                                        @Html.TextBoxFor(model => model.Paid, new { @class = "form-control", Value = String.Format("{0:0}", Model.Paid) })
                                         <span class="input-error-box text-danger"></span>
                                     </div>
                                 </div>
@@ -91,14 +91,14 @@
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label" for="Phone">Ngày ship <span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
-                                        @Html.TextBox("ShipDate", Model.ShipDate != null? Model.ShipDate.ToShortDateString() : string.Empty, new { @class = "form-control datepicker" }) <span class="input-error-box text-danger"></span>
+                                        @Html.TextBox("ShipDate", Model.ShipDate != null? Model.ShipDate.ToShortDateString() : string.Empty, new { @class = "form-control datepicker" })
                                         <span class="input-error-box text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-sm-3 control-label" for="Phone">Ngày trả tiền <span class="text-danger">*</span></label>
                                     <div class="col-sm-7">
-                                        @Html.TextBox("PaymentDate", Model.PaymentDate != null ? Model.PaymentDate.Value.ToShortDateString(): string.Empty, new { @class = "form-control datepicker" }) <span class="input-error-box text-danger"></span>
+                                        @Html.TextBox("PaymentDate", Model.PaymentDate != null ? Model.PaymentDate.Value.ToShortDateString(): string.Empty, new { @class = "form-control datepicker" })
                                         <span class="input-error-box text-danger"></span>
                                     </div>
                                 </div>
@@ -112,12 +112,12 @@
                             </div>
 
                         </div>
-
+                        @Html.Hidden("OrderDetaisCount", Model.OrderDetails.Count)
                         @if (Model.OrderDetails.Any())
                         {                           
                             <div class="row">
                                 <div class="col-sm-12 dataTable_grid">
-                                    <table class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline" role="grid" aria-describedby="dataTables-example_info" style="width: 100%;">
+                                    <table class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline" role="grid" aria-describedby="dataTables-example_info" id="detailsOrdersTable" style="width: 100%;">
                                         <thead>
                                             <tr role="row">
                                                 <th class="center" tabindex="0" rowspan="1" colspan="1">#</th>
@@ -185,7 +185,7 @@
                                 <div class="form-group">
                                     <div class="col-md-12 form-button">
                                         <button class="btn btn-primary" type="button" id="SubmitUpdateOrder"><i class="glyphicon glyphicon-floppy-disk"></i> Lưu </button>
-                                        <button class="btn btn-danger" type="reset"><i class="glyphicon glyphicon-remove"></i>Hủy</button>
+                                        <button class="btn btn-danger" type="button" id="CancelUpdateOrder"><i class="glyphicon glyphicon-remove"></i>Hủy</button>
                                     </div>
                                 </div>
                             </div>
