--- a/170516/Views/Administrator/UpdateSupplier.cshtml
+++ b/170516/Views/Administrator/UpdateSupplier.cshtml
@@ -59,7 +59,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label" for="Address2">Địa chỉ 2: <span class="text-danger">*</span></label>
+                                    <label class="col-sm-3 control-label" for="Address2">Địa chỉ 2: </label>
                                     <div class="col-sm-7">
                                         @Html.TextBoxFor(model => model.Address2, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
                                         @Html.ValidationMessageFor(model => model.Address2, null, new { @class = "input-error-box text-danger" })
@@ -81,7 +81,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-sm-3 control-label" for="Fax">Fax: <span class="text-danger">*</span></label>
+                                    <label class="col-sm-3 control-label" for="Fax">Fax: </label>
                                     <div class="col-sm-7">
                                         @Html.TextBoxFor(model => model.Fax, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
                                         @Html.ValidationMessageFor(model => model.Fax, null, new { @class = "input-error-box text-danger" })
@@ -115,7 +115,15 @@
                                     <label class="control-label">Logo</label>
                                     <!-- IMAGE -->
                                     <div class="image-box">
-                                        <img id="ImageBox" src="~/Content/Image/image_placeholder.jpg" class="image-box" />
+                                        @if (string.IsNullOrEmpty(Model.Logo))
+                                        {
+                                            <img id="ImageBox" src="~/Content/Image/image_placeholder.jpg" class="image-box" />
+                                        }
+                                        else
+                                        {
+                                            <img id="ImageBox" src="@Model.Logo" class="image-box" />
+                                        }
+                                        
                                         <div id="ImagePreviewBox" class="preview-box" style="max-width:80%;"></div>
                                         <input id="ImageUpload" type="file" class="image-file-input" name="ImageUpload" />
                                         <input id="SupplierImage" type="hidden" name="Logo" />
@@ -129,7 +137,7 @@
                                 <div class="form-group">
                                     <div class="col-md-12 form-button">
                                         <button class="btn btn-primary" type="button" id="SubmitUpdateSupplier"><i class="glyphicon glyphicon-floppy-disk"></i> Lưu</button>
-                                        <button class="btn btn-danger" type="reset"><i class="glyphicon glyphicon-remove"></i>Làm mới</button>
+                                        <button class="btn btn-danger" type="button"  id="CancelUpdateSupplier"><i class="glyphicon glyphicon-remove"></i>Hủy</button>
                                     </div>
                                 </div>
                             </div>
