--- a/170516/Views/Shared/_AdminLayout.cshtml
+++ b/170516/Views/Shared/_AdminLayout.cshtml
@@ -30,7 +30,24 @@
             <div class="col-md-2">
                 <!-- menu -->
                 <div class="sidebar content-box" style="display:block">
-                    <ul class="nav">
+                    <ul class="nav nav-pills nav-stacked">
+                        <li class="active"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Tổng Kết</a></li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
+                                Nội Dung <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="@Url.Action("ViewProductCategory","Administrator")">Danh Mục</a></li>
+                                <li><a href="@Url.Action("ViewProduct","Administrator")">Sản Phẩm</a></li>
+                                <li><a href="@Url.Action("ViewSupplier","Administrator")">Nhà cung cấp</a></li>
+                                <li><a href="@Url.Action("ViewShipper","Administrator")">Shipper</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="stats.html"><i class="fa fa-users" aria-expanded="false"></i> Tài Khoản</a></li>
+                        <li><a href="@Url.Action("ViewOrder","Administrator")"><i class="fa fa-list" aria-expanded="false"></i> Đơn Hàng</a></li>
+                        <li><a href="buttons.html"><i class="fa fa-bar-chart" aria-expanded="false"></i> Thống Kê</a></li>
+                    </ul>
+                    @*<ul class="nav">
                         <!-- Main menu -->
                         <li class="current"><a href="index.html"><i class="glyphicon glyphicon-home"></i> Tổng Kết</a></li>
                         <li class="submenu">
@@ -49,7 +66,7 @@
                         <li><a href="stats.html"><i class="glyphicon glyphicon-user"></i> Tài Khoản</a></li>
                         <li><a href="@Url.Action("ViewOrder","Administrator")"><i class="glyphicon glyphicon-list"></i> Đơn Hàng</a></li>
                         <li><a href="buttons.html"><i class="glyphicon glyphicon-stats"></i> Thống Kê</a></li>
-                    </ul>
+                    </ul>*@
                 </div>
             </div>
             <div class="col-md-10">
@@ -89,6 +106,7 @@
             addProduct: "@Url.Action("AddProduct","Administrator")",
             viewProduct: "@Url.Action("ViewProduct","Administrator")",
             updateProduct: "@Url.Action("UpdateProduct", "Administrator")",
+            addSpecification: "@Url.Action("AddSpecification", "Administrator")",
 
             viewSupplier: "@Url.Action("ViewSupplier","Administrator")",
             addSupplier: "@Url.Action("AddSupplier", "Administrator")",
