--- a/170516/Views/Home/Index.cshtml
+++ b/170516/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
         </div>
     </div>
 </div>
-<div class="col-lg-9 col-md-9 col-sm-8 content-box">
+<div class="col-lg-9 col-md-9 col-sm-8 content-box" id="ShowCaseDiv">
     <div class="hero_wrapper">
         <img src="http://www.reuven-gth.com/wp-content/uploads/2013/11/constructionBanner.jpg">
         <div class="hero-unit hero_info">
